--- a/desktop_peeps/export_presets.cfg
+++ b/desktop_peeps/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../desktop/desktop_peeps.exe"
+export_path="../../../../desktop/Moogie.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -23,7 +23,7 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
@@ -34,7 +34,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://1oavpkj65mu2"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
@@ -76,7 +76,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../desktop/desktop_peeps.zip"
+export_path="../../../../desktop/Moogie.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -91,8 +91,8 @@ export/distribution_type=1
 binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-application/icon=""
+debug/export_console_wrapper=0
+application/icon="uid://1oavpkj65mu2"
 application/icon_interpolation=4
 application/bundle_identifier="e"
 application/signature=""
